# orthanc-test

./: docker-compose.yml  misc_commands.txt  test.rest
dicom_viewer_proto/: .gitignore  README.md  pubspec.yaml
dicom_viewer_proto/android/app/: build.gradle
dicom_viewer_proto/ios/Runner/: Info.plist  bridge_generated.h
dicom_viewer_proto/ios/Runner.xcodeproj/: project.pbxproj
dicom_viewer_proto/lib/: bridge_definitions.dart  bridge_generated.dart  ffi.dart  landing_page.dart  main.dart  random_utils.dart
dicom_viewer_proto/lib/all_patients/application/: patient_list_state_notifier.dart
dicom_viewer_proto/lib/all_patients/infra/: all_patients_fit.dart  all_patients_fit.g.dart
dicom_viewer_proto/lib/all_patients/model/: patient_list.dart  patient_list.freezed.dart  patient_list.g.dart
dicom_viewer_proto/lib/all_patients/shared/: all_patients_fit_provider.dart  (+1 more)
dicom_viewer_proto/lib/core/: app_widget.dart  clients.dart  logger.dart  studies_fit_client.dart
dicom_viewer_proto/lib/instance/: instance_state_notifier.dart  instance_view.dart
dicom_viewer_proto/linux/: CMakeLists.txt  my_application.cc
dicom_viewer_proto/macos/Runner.xcodeproj/: project.pbxproj
dicom_viewer_proto/native/: Cargo.toml
dicom_viewer_proto/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
dicom_viewer_proto/test/: widget_test.dart
dicom_viewer_proto/web/: index.html  manifest.json
dicom_viewer_proto/windows/: CMakeLists.txt
dicom_viewer_proto/windows/runner/: Runner.rc  main.cpp
orthanc/: Dockerfile  orthanc.json
(+85 files in other folders)
